Updated .ContentPane to have overflow-x: auto instead of (commented out) overflow: auto to prevent content from showing a horizontal scroll bar.

--- a/Nucleus.Web/Shared/Layouts/default.css
+++ b/Nucleus.Web/Shared/Layouts/default.css
@@ -47,7 +47,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	/*overflow: auto;*/
+	overflow-x: auto;
 }
 
 .ContentPane > div
